--- a/apps/suggestions/requirements/requirements.txt
+++ b/apps/suggestions/requirements/requirements.txt
@@ -5,3 +5,4 @@ opentelemetry-api==1.11.1
 opentelemetry-sdk==1.11.1
 opentelemetry-exporter-otlp-proto-grpc==1.11.1
 protobuf~=3.20.0
+Werkzeug==2.2.2
