--- a/jaeger-lab/jaeger/docker-compose.yaml
+++ b/jaeger-lab/jaeger/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     image: jaegertracing/opentelemetry-all-in-one:latest
     ports:
       - "16686:16686" # api
+      - "16685:16685" # jaeger-query service gRPC server
       - "4317:4317" # grpc
 
 networks:
