--- a/customize-tracing-tag/docker-compose.yaml
+++ b/customize-tracing-tag/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - "10000:10000"
     volumes:
       - ./envoy.yaml:/etc/envoy/envoy.yaml
+    environment:
+      - CUSTOMTAG_ENV="hello env"
     networks:
       - cust-envoy
   
