--- a/elastic/kibana/docker-compose.yaml
+++ b/elastic/kibana/docker-compose.yaml
@@ -1,25 +1,41 @@
 version: "3"
 
 services:
-  suggestions-microservice:
-    build: ../apps/suggestions/.
-    env_file:
-      - ../apps/suggestions/.env.docker
-    ports:
-      - "8002:8002"
+  # suggestions-microservice:
+  #   build: ./apps/suggestions/.
+  #   env_file:
+  #     - ./apps/suggestions/.env.docker
+  #   ports:
+  #     - "8002:8002"
+  #   networks:
+  #     - elastic-jaeger
+  #
+  # articles-microservice:
+  #   build: ./apps/articles/.
+  #   env_file:
+  #     - ./apps/articles/.env.docker
+  #   ports:
+  #     - "8001:8001"
+  #   networks: 
+  #     - elastic-jaeger
+  #   depends_on:
+  #     - suggestions-microservice
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.9.3
     networks:
       - elastic-jaeger
-
-  articles-microservice:
-    build: ../apps/articles/.
-    env_file:
-      - ../apps/articles/.env.docker
+    labels:
+      co.elastic.logs/module: kibana
     ports:
-      - "8001:8001"
-    networks: 
-      - elastic-jaeger
+      - "127.0.0.1:5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - XPACK_SECURITY_ENABLED=false
+      - INTERACTIVESETUP_ENABLED=false
     depends_on:
-      - suggestions-microservice
+      - elasticsearch
+
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
@@ -35,68 +51,69 @@ services:
       - http.host=0.0.0.0
       - transport.host=127.0.0.1
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
-      - xpack.security.enabled=false
+      - XPACK_SECURITY_ENABLED=false
+      # - INTERACTIVESETUP_ENABLED=false
     volumes:
       - esdata:/usr/share/elasticsearch/data
 
-  jaeger-collector:
-    image: jaegertracing/jaeger-collector
-    ports:
-      - "14269:14269"
-      - "14268:14268"
-      - "14267:14267"
-      - "14250:14250"
-      - "9411:9411"
-    networks:
-      elastic-jaeger: 
-        aliases:
-          - jaeger
-    restart: on-failure
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-    command: 
-      - "--es.server-urls=http://elasticsearch:9200"
-      - "--es.num-shards=1"
-      - "--es.num-replicas=0"
-      - "--log-level=error"
-    depends_on:
-      - elasticsearch
-
-  jaeger-agent:
-    image: jaegertracing/jaeger-agent
-    hostname: jaeger-agent
-    command: ["--reporter.grpc.host-port=jaeger-collector:14250"]
-    ports:
-      - "5775:5775/udp"
-      - "6831:6831/udp"
-      - "6832:6832/udp"
-      - "5778:5778"
-    networks:
-      - elastic-jaeger
-    restart: on-failure
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-    depends_on:
-      - jaeger-collector
-
-  jaeger-query:
-    image: jaegertracing/jaeger-query
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-      - no_proxy=localhost
-    ports:
-      - "16686:16686"
-      - "16687:16687"
-    networks:
-      - elastic-jaeger
-    restart: on-failure
-    command: 
-      - "--es.server-urls=http://elasticsearch:9200"
-      - "--span-storage.type=elasticsearch"
-    
-    depends_on:
-      - jaeger-agent
-
+  # jaeger-collector:
+  #   image: jaegertracing/jaeger-collector
+  #   ports:
+  #     - "14269:14269"
+  #     - "14268:14268"
+  #     - "14267:14267"
+  #     - "14250:14250"
+  #     - "9411:9411"
+  #   networks:
+  #     elastic-jaeger: 
+  #       aliases:
+  #         - jaeger
+  #   restart: on-failure
+  #   environment:
+  #     - SPAN_STORAGE_TYPE=elasticsearch
+  #   command: 
+  #     - "--es.server-urls=http://elasticsearch:9200"
+  #     - "--es.num-shards=1"
+  #     - "--es.num-replicas=0"
+  #     - "--log-level=error"
+  #   depends_on:
+  #     - elasticsearch
+  #
+  # jaeger-agent:
+  #   image: jaegertracing/jaeger-agent
+  #   hostname: jaeger-agent
+  #   command: ["--reporter.grpc.host-port=jaeger-collector:14250"]
+  #   ports:
+  #     - "5775:5775/udp"
+  #     - "6831:6831/udp"
+  #     - "6832:6832/udp"
+  #     - "5778:5778"
+  #   networks:
+  #     - elastic-jaeger
+  #   restart: on-failure
+  #   environment:
+  #     - SPAN_STORAGE_TYPE=elasticsearch
+  #   depends_on:
+  #     - jaeger-collector
+  #
+  # jaeger-query:
+  #   image: jaegertracing/jaeger-query
+  #   environment:
+  #     - SPAN_STORAGE_TYPE=elasticsearch
+  #     - no_proxy=localhost
+  #   ports:
+  #     - "16686:16686"
+  #     - "16687:16687"
+  #   networks:
+  #     - elastic-jaeger
+  #   restart: on-failure
+  #   command: 
+  #     - "--es.server-urls=http://elasticsearch:9200"
+  #     - "--span-storage.type=elasticsearch"
+  #   
+  #   depends_on:
+  #     - elasticsearch
+  #
 volumes:
   esdata:
     driver: local
