--- a/elastic/kibana/docker-compose.yaml
+++ b/elastic/kibana/docker-compose.yaml
@@ -22,11 +22,10 @@ services:
   #     - suggestions-microservice
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.9.3
+    image: docker.elastic.co/kibana/kibana:8.11.1
     networks:
       - elastic-jaeger
-    labels:
-      co.elastic.logs/module: kibana
+    restart: on-failure
     ports:
       - "127.0.0.1:5601:5601"
     environment:
@@ -38,7 +37,7 @@ services:
 
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.9.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
     networks:
       - elastic-jaeger
     ports:
@@ -51,10 +50,11 @@ services:
       - http.host=0.0.0.0
       - transport.host=127.0.0.1
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
-      - XPACK_SECURITY_ENABLED=false
-      # - INTERACTIVESETUP_ENABLED=false
+      - xpack.security.enabled=false
+
+      - INTERACTIVESETUP_ENABLED=false
     volumes:
-      - esdata:/usr/share/elasticsearch/data
+      - es8-11:/usr/share/elasticsearch/data
 
   # jaeger-collector:
   #   image: jaegertracing/jaeger-collector
@@ -115,7 +115,7 @@ services:
   #     - elasticsearch
   #
 volumes:
-  esdata:
+  es8-11:
     driver: local
 
 networks:
