--- a/elastic/kibana/docker-compose.yaml
+++ b/elastic/kibana/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
   #     - suggestions-microservice
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.11.1
+    image: docker.elastic.co/kibana/kibana:7.17.15
     networks:
       - elastic-jaeger
     restart: on-failure
@@ -37,7 +37,7 @@ services:
 
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
     networks:
       - elastic-jaeger
     ports:
@@ -51,33 +51,32 @@ services:
       - transport.host=127.0.0.1
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
       - xpack.security.enabled=false
-
       - INTERACTIVESETUP_ENABLED=false
     volumes:
-      - es8-11:/usr/share/elasticsearch/data
+      - es7-15:/usr/share/elasticsearch/data
 
-  # jaeger-collector:
-  #   image: jaegertracing/jaeger-collector
-  #   ports:
-  #     - "14269:14269"
-  #     - "14268:14268"
-  #     - "14267:14267"
-  #     - "14250:14250"
-  #     - "9411:9411"
-  #   networks:
-  #     elastic-jaeger: 
-  #       aliases:
-  #         - jaeger
-  #   restart: on-failure
-  #   environment:
-  #     - SPAN_STORAGE_TYPE=elasticsearch
-  #   command: 
-  #     - "--es.server-urls=http://elasticsearch:9200"
-  #     - "--es.num-shards=1"
-  #     - "--es.num-replicas=0"
-  #     - "--log-level=error"
-  #   depends_on:
-  #     - elasticsearch
+  jaeger-collector:
+    image: jaegertracing/jaeger-collector
+    ports:
+      - "14269:14269"
+      - "14268:14268"
+      - "14267:14267"
+      - "14250:14250"
+      - "9411:9411"
+    networks:
+      elastic-jaeger: 
+        aliases:
+          - jaeger
+    restart: on-failure
+    environment:
+      - SPAN_STORAGE_TYPE=elasticsearch
+    command: 
+      - "--es.server-urls=http://elasticsearch:9200"
+      - "--es.num-shards=1"
+      - "--es.num-replicas=0"
+      - "--log-level=error"
+    depends_on:
+      - elasticsearch
   #
   # jaeger-agent:
   #   image: jaegertracing/jaeger-agent
@@ -115,7 +114,7 @@ services:
   #     - elasticsearch
   #
 volumes:
-  es8-11:
+  es7-15:
     driver: local
 
 networks:
