--- a/elastic/kibana/docker-compose.yaml
+++ b/elastic/kibana/docker-compose.yaml
@@ -1,25 +1,25 @@
 version: "3"
 
 services:
-  # suggestions-microservice:
-  #   build: ./apps/suggestions/.
-  #   env_file:
-  #     - ./apps/suggestions/.env.docker
-  #   ports:
-  #     - "8002:8002"
-  #   networks:
-  #     - elastic-jaeger
-  #
-  # articles-microservice:
-  #   build: ./apps/articles/.
-  #   env_file:
-  #     - ./apps/articles/.env.docker
-  #   ports:
-  #     - "8001:8001"
-  #   networks: 
-  #     - elastic-jaeger
-  #   depends_on:
-  #     - suggestions-microservice
+  suggestions-microservice:
+    build: ./apps/suggestions/.
+    env_file:
+      - ./apps/suggestions/.env.docker
+    ports:
+      - "8002:8002"
+    networks:
+      - elastic-jaeger
+
+  articles-microservice:
+    build: ./apps/articles/.
+    env_file:
+      - ./apps/articles/.env.docker
+    ports:
+      - "8001:8001"
+    networks: 
+      - elastic-jaeger
+    depends_on:
+      - suggestions-microservice
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.15
@@ -53,7 +53,7 @@ services:
       - xpack.security.enabled=false
       - INTERACTIVESETUP_ENABLED=false
     volumes:
-      - es7-15:/usr/share/elasticsearch/data
+      - es7-17:/usr/share/elasticsearch/data
 
   jaeger-collector:
     image: jaegertracing/jaeger-collector
@@ -77,44 +77,27 @@ services:
       - "--log-level=error"
     depends_on:
       - elasticsearch
-  #
-  # jaeger-agent:
-  #   image: jaegertracing/jaeger-agent
-  #   hostname: jaeger-agent
-  #   command: ["--reporter.grpc.host-port=jaeger-collector:14250"]
-  #   ports:
-  #     - "5775:5775/udp"
-  #     - "6831:6831/udp"
-  #     - "6832:6832/udp"
-  #     - "5778:5778"
-  #   networks:
-  #     - elastic-jaeger
-  #   restart: on-failure
-  #   environment:
-  #     - SPAN_STORAGE_TYPE=elasticsearch
-  #   depends_on:
-  #     - jaeger-collector
-  #
-  # jaeger-query:
-  #   image: jaegertracing/jaeger-query
-  #   environment:
-  #     - SPAN_STORAGE_TYPE=elasticsearch
-  #     - no_proxy=localhost
-  #   ports:
-  #     - "16686:16686"
-  #     - "16687:16687"
-  #   networks:
-  #     - elastic-jaeger
-  #   restart: on-failure
-  #   command: 
-  #     - "--es.server-urls=http://elasticsearch:9200"
-  #     - "--span-storage.type=elasticsearch"
-  #   
-  #   depends_on:
-  #     - elasticsearch
+
+  jaeger-query:
+    image: jaegertracing/jaeger-query
+    environment:
+      - SPAN_STORAGE_TYPE=elasticsearch
+      - no_proxy=localhost
+    ports:
+      - "16686:16686"
+      - "16687:16687"
+    networks:
+      - elastic-jaeger
+    restart: on-failure
+    command: 
+      - "--es.server-urls=http://elasticsearch:9200"
+      - "--span-storage.type=elasticsearch"
+    
+    depends_on:
+      - elasticsearch
   #
 volumes:
-  es7-15:
+  es7-17:
     driver: local
 
 networks:
