--- a/content/jaeger-query-grpc/all-in-one/docker-compose.yaml
+++ b/content/jaeger-query-grpc/all-in-one/docker-compose.yaml
@@ -17,7 +17,14 @@ services:
     depends_on:
       - suggestions-microservice
 
+  jaeger:
+    image: jaegertracing/opentelemetry-all-in-one:latest
+    ports:
+      - "16686:16686" # api
+      - "16685:16685" # jaeger-query service gRPC server
+      - "4317:4317" # grpc
+
 networks:
   default:
-    name: microservices
+    name: lab-jaeger-query-grpc
     driver: bridge
