--- a/content/elasticsearch/docker-compose.yaml
+++ b/content/elasticsearch/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8002:8002"
     networks:
-      - elastic-jaeger
+      - net-elasticsearch
 
   articles-microservice:
     build: ./apps/articles/.
@@ -17,14 +17,14 @@ services:
     ports:
       - "8001:8001"
     networks: 
-      - elastic-jaeger
+      - net-elasticsearch
     depends_on:
       - suggestions-microservice
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.15
     networks:
-      - elastic-jaeger
+      - net-elasticsearch
     restart: on-failure
     ports:
       - "127.0.0.1:5601:5601"
@@ -39,7 +39,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
     networks:
-      - elastic-jaeger
+      - net-elasticsearch
     ports:
       - "127.0.0.1:9200:9200"
       - "127.0.0.1:9300:9300"
@@ -64,9 +64,7 @@ services:
       - "14250:14250"
       - "9411:9411"
     networks:
-      elastic-jaeger: 
-        aliases:
-          - jaeger
+      - net-elasticsearch: 
     restart: on-failure
     environment:
       - SPAN_STORAGE_TYPE=elasticsearch
@@ -87,7 +85,7 @@ services:
       - "16686:16686"
       - "16687:16687"
     networks:
-      - elastic-jaeger
+      - net-elasticsearch
     restart: on-failure
     command: 
       - "--es.server-urls=http://elasticsearch:9200"
@@ -101,7 +99,7 @@ volumes:
     driver: local
 
 networks:
-  elastic-jaeger:
+  net-elasticsearch:
     driver: bridge 
 
 
