--- a/content/elasticsearch/envoy/docker-compose.yaml
+++ b/content/elasticsearch/envoy/docker-compose.yaml
@@ -1,101 +1,92 @@
-version: "3"
-
 services:
-  envoy:
-    image: envoyproxy/envoy:dev-8d267ca634a21eb6b6922caa18dc69317ef4f65f
-    ports:
-      - "10000:10000" # Inbound endpoint
-      - "8001:8001" # Admin interface
-    volumes:
-      - ./envoy.yaml:/etc/envoy/envoy.yaml
-      - ./wasm/main.wasm:/etc/wasm/main.wasm
+  envoy-front-proxy:
+    build:
+      context: .
+      dockerfile: ../shared/envoy/Dockerfile
+      args:
+        ENVOY_CONFIG: envoy-front-proxy.yaml
     networks:
-      - envoy-merge-log
-  helloworld:
-    build: helloworldapp/
-    ports: 
-      - "8002:8002" # helloword is listen on the 
-    networks:
-      - envoy-merge-log
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:7.17.15
-    networks:
-      - envoy-merge-log
-    restart: on-failure
-    ports:
-      - "127.0.0.1:5601:5601"
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-      - XPACK_SECURITY_ENABLED=false
-      - INTERACTIVESETUP_ENABLED=false
+      - otel-envoy
     depends_on:
-      - elasticsearch
-
-
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.15
-    networks:
-      - envoy-merge-log
+      # jaeger:
+      #   condition: service_healthy
+      envoy-1:
+        condition: service_started
+      envoy-2:
+        condition: service_started
     ports:
-      - "127.0.0.1:9200:9200"
-      - "127.0.0.1:9300:9300"
-    restart: on-failure
+    - "${PORT_PROXY:-10000}:10000"
+
+  envoy-1:
+    build:
+      context: .
+      dockerfile: ../shared/envoy/Dockerfile
+      args:
+        ENVOY_CONFIG: envoy-1.yaml
+    networks:
+      - otel-envoy
+    depends_on:
+      # jaeger:
+      #   condition: service_healthy
+      service-1:
+        condition: service_healthy
+      envoy-2:
+        condition: service_started
+
+  envoy-2:
+    build:
+      context: .
+      dockerfile: ../shared/envoy/Dockerfile
+      args:
+        ENVOY_CONFIG: envoy-2.yaml
+    networks:
+      - otel-envoy
+    depends_on:
+      # jaeger:
+      #   condition: service_healthy
+      service-2:
+        condition: service_healthy
+
+  service-1:
+    build:
+      context: ../shared/python
+      target: aiohttp-tracing-service
+    networks:
+      - otel-envoy
     environment:
-      - cluster.name=jaeger-cluster
-      - discovery.type=single-node
-      - http.host=0.0.0.0
-      - transport.host=127.0.0.1
-      - ES_JAVA_OPTS=-Xms512m -Xmx512m
-      - xpack.security.enabled=false
-      - INTERACTIVESETUP_ENABLED=false
-    volumes:
-      - esenvoy:/usr/share/elasticsearch/data
+    - SERVICE_NAME=1
+
+  service-2:
+    build:
+      context: ../shared/python
+      target: aiohttp-tracing-service
+    networks:
+      - otel-envoy
+    environment:
+    - SERVICE_NAME=2
 
   jaeger-collector:
-    image: jaegertracing/jaeger-collector
-    ports:
-      - "14269:14269"
-      - "14268:14268"
-      - "14267:14267"
-      - "14250:14250"
-      - "9411:9411"
+    image: jaegertracing/opentelemetry-all-in-one:latest
     networks:
-      - envoy-merge-log
-    restart: on-failure
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-    command: 
-      - "--es.server-urls=http://elasticsearch:9200"
-      - "--es.num-shards=1"
-      - "--es.num-replicas=0"
-      - "--log-level=error"
-    depends_on:
-      - elasticsearch
-
-  jaeger-query:
-    image: jaegertracing/jaeger-query
-    environment:
-      - SPAN_STORAGE_TYPE=elasticsearch
-      - no_proxy=localhost
+      - otel-envoy
     ports:
-      - "16686:16686"
-      - "16687:16687"
-    networks:
-      - envoy-merge-log
-    restart: on-failure
-    command: 
-      - "--es.server-urls=http://elasticsearch:9200"
-      - "--span-storage.type=elasticsearch"
-    
-    depends_on:
-      - elasticsearch
-volumes:
-  esenvoy:
-    driver: local
+      - "16686:16686" # api
+      - "16685:16685" # jaeger-query service gRPC server
+      - "4317:4317" # grpc
 
+  # opentelemetry:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile-opentelemetry
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "curl -sf http://localhost:13133 || exit 1"]
+  #     interval: 1s
+  #     timeout: 120s
+  #     retries: 120
+  #     start_period: 5s
+  #   command: ["--config=/etc/otel-collector-config.yaml"]
+  #   ports:
+  #   - "${PORT_UI:-55679}:55679"
 networks:
-  envoy-merge-log:
-    driver: bridge 
-
-
+  otel-envoy:
+    driver: bridge
