--- a/content/elasticsearch/envoy/envoy-1.yaml
+++ b/content/elasticsearch/envoy/envoy-1.yaml
@@ -22,7 +22,7 @@ static_resources:
                 "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                 grpc_service:
                   envoy_grpc:
-                    cluster_name: opentelemetry_collector
+                    cluster_name: jaeger-collector
                   timeout: 0.250s
                 service_name: envoy-1
           codec_type: AUTO
@@ -48,7 +48,7 @@ static_resources:
       socket_address:
         address: 0.0.0.0
         port_value: 10001
-    traffic_direction: OUTBOUND
+    traffic_direction: INBOUND
     filter_chains:
     - filters:
       - name: envoy.filters.network.http_connection_manager
@@ -109,7 +109,7 @@ static_resources:
               socket_address:
                 address: envoy-2
                 port_value: 10000
-  - name: opentelemetry_collector
+  - name: jaeger-collector
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
     typed_extension_protocol_options:
@@ -118,11 +118,11 @@ static_resources:
         explicit_http_config:
           http2_protocol_options: {}
     load_assignment:
-      cluster_name: opentelemetry_collector
+      cluster_name: jaeger-collector
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: opentelemetry
+                address: jaeger-collector
                 port_value: 4317
