--- a/content/elasticsearch/envoy/envoy-1.yaml
+++ b/content/elasticsearch/envoy/envoy-1.yaml
@@ -15,6 +15,9 @@ static_resources:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          # ---------------------
+          # Tracing configuration 
+          # ---------------------
           tracing:
             provider:
               name: envoy.tracers.opentelemetry
@@ -27,10 +30,33 @@ static_resources:
                 service_name: envoy-1
           codec_type: AUTO
           stat_prefix: ingress_http
+          # -------------------
+          # HTTP filters chain 
+          # -------------------
           http_filters:
+          # ----------
+          # WASM filter
+          # -----------
+          - name: envoy.filters.http.wasm
+            typed_config:
+              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
+              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
+              value:
+                config:
+                  vm_config:
+                    runtime: "envoy.wasm.runtime.v8"
+                    code:
+                      local:
+                        filename: "/etc/wasm/main.wasm"
+          # --------------
+          # Routing filter
+          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+          # --------------
+          # Routing config
+          # --------------
           route_config:
             name: service1_route
             virtual_hosts:
@@ -54,6 +80,9 @@ static_resources:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          # ---------------------
+          # Tracing configuration 
+          # ---------------------
           tracing:
             provider:
               name: envoy.tracers.opentelemetry
@@ -66,10 +95,35 @@ static_resources:
                 service_name: envoy-1
           codec_type: AUTO
           stat_prefix: egress_http
+
+          # -------------------
+          # HTTP filters chain 
+          # -------------------
           http_filters:
+          # ----------
+          # WASM filter
+          # -----------
+          - name: envoy.filters.http.wasm
+            typed_config:
+              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
+              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
+              value:
+                config:
+                  vm_config:
+                    runtime: "envoy.wasm.runtime.v8"
+                    code:
+                      local:
+                        filename: "/etc/wasm/main.wasm"
+          # --------------
+          # Routing filter
+          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
+
+          # --------------
+          # Routing config
+          # --------------
           route_config:
             name: envoy2_route
             virtual_hosts:
