--- a/content/elasticsearch/envoy-zipkin-provider/envoy-2.yaml
+++ b/content/elasticsearch/envoy-zipkin-provider/envoy-2.yaml
@@ -17,14 +17,13 @@ static_resources:
           # ---------------------
           tracing:
             provider:
-              name: envoy.tracers.opentelemetry
+              name: envoy.tracers.zipkin
               typed_config:
-                "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
-                grpc_service:
-                  envoy_grpc:
-                    cluster_name: jaeger-collector
-                  timeout: 0.250s
-                service_name: envoy-2
+                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
+                collector_cluster: jaeger-collector
+                collector_endpoint: "/api/v2/spans"
+                collector_endpoint_version: HTTP_JSON
+
           codec_type: AUTO
           stat_prefix: ingress_http
           # -------------------
@@ -97,4 +96,4 @@ static_resources:
             address:
               socket_address:
                 address: jaeger-collector
-                port_value: 4317
+                port_value: 9411
