--- a/content/elasticsearch/envoy-zipkin-provider/envoy-1.yaml
+++ b/content/elasticsearch/envoy-zipkin-provider/envoy-1.yaml
@@ -3,6 +3,10 @@
 #   10000 -> routes to `service-1`
 #   10001 -> routes to `envoy-2`
 
+node:
+  # The cluster name is used by Zipkin to identify the proxy.
+  cluster: envoy-proxy-1
+
 static_resources:
   listeners:
   - address:
@@ -15,47 +19,20 @@ static_resources:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-          # ---------------------
-          # Tracing configuration 
-          # ---------------------
           tracing:
             provider:
               name: envoy.tracers.zipkin
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
-                collector_cluster: jaeger-collector
+                collector_cluster: zipkin
                 collector_endpoint: "/api/v2/spans"
                 collector_endpoint_version: HTTP_JSON
-
           codec_type: AUTO
           stat_prefix: ingress_http
-          # -------------------
-          # HTTP filters chain 
-          # -------------------
           http_filters:
-          # ----------
-          # WASM filter
-          # -----------
-          - name: envoy.filters.http.wasm
-            typed_config:
-              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
-              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
-              value:
-                config:
-                  vm_config:
-                    runtime: "envoy.wasm.runtime.v8"
-                    code:
-                      local:
-                        filename: "/etc/wasm/main.wasm"
-          # --------------
-          # Routing filter
-          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
-          # --------------
-          # Routing config
-          # --------------
           route_config:
             name: service1_route
             virtual_hosts:
@@ -73,65 +50,26 @@ static_resources:
       socket_address:
         address: 0.0.0.0
         port_value: 10001
-    traffic_direction: INBOUND
+    traffic_direction: OUTBOUND
     filter_chains:
     - filters:
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
-          # ---------------------
-          # Tracing configuration 
-          # ---------------------
-          tracing:
-            provider:
-              name: envoy.tracers.opentelemetry
-              typed_config:
-                "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
-                grpc_service:
-                  envoy_grpc:
-                    cluster_name: jaeger-collector
-                  timeout: 0.250s
-                service_name: envoy-2
           tracing:
             provider:
               name: envoy.tracers.zipkin
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
-                collector_cluster: jaeger-collector
+                collector_cluster: zipkin
                 collector_endpoint: "/api/v2/spans"
                 collector_endpoint_version: HTTP_JSON
-
           codec_type: AUTO
           stat_prefix: egress_http
-
-          # -------------------
-          # HTTP filters chain 
-          # -------------------
           http_filters:
-          # ----------
-          # WASM filter
-          # -----------
-          - name: envoy.filters.http.wasm
-            typed_config:
-              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
-              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
-              value:
-                config:
-                  vm_config:
-                    runtime: "envoy.wasm.runtime.v8"
-                    code:
-                      local:
-                        filename: "/etc/wasm/main.wasm"
-          # --------------
-          # Routing filter
-          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
-
-          # --------------
-          # Routing config
-          # --------------
           route_config:
             name: envoy2_route
             virtual_hosts:
@@ -171,20 +109,15 @@ static_resources:
               socket_address:
                 address: envoy-2
                 port_value: 10000
-  - name: jaeger-collector
+  - name: zipkin
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
-    typed_extension_protocol_options:
-      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
-        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
-        explicit_http_config:
-          http2_protocol_options: {}
     load_assignment:
-      cluster_name: jaeger-collector
+      cluster_name: zipkin
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: jaeger-collector
+                address: zipkin
                 port_value: 9411
