--- a/content/elasticsearch/envoy-zipkin-provider/envoy-front-proxy.yaml
+++ b/content/elasticsearch/envoy-zipkin-provider/envoy-front-proxy.yaml
@@ -3,6 +3,10 @@
 #   /trace/1 -> routes to `envoy-1` on port 10000
 #   /trace/2 -> routes to `envoy-1` on port 10001 (for onward routing to `envoy-2`)
 
+node:
+  # The cluster name is used by Zipkin to identify the proxy.
+  cluster: envoy-proxy-front
+
 static_resources:
   listeners:
   - address:
@@ -12,52 +16,24 @@ static_resources:
     traffic_direction: OUTBOUND
     filter_chains:
     - filters:
-      # HTTP Connection manager
       - name: envoy.filters.network.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           generate_request_id: true
-          # ---------------------
-          # Tracing configuration 
-          # ---------------------
           tracing:
             provider:
               name: envoy.tracers.zipkin
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
-                collector_cluster: jaeger-collector
+                collector_cluster: zipkin
                 collector_endpoint: "/api/v2/spans"
                 collector_endpoint_version: HTTP_JSON
-
           codec_type: AUTO
           stat_prefix: ingress_http
-          # -------------------
-          # HTTP filters chain 
-          # -------------------
           http_filters:
-          # ----------
-          # WASM filter
-          # -----------
-          - name: envoy.filters.http.wasm
-            typed_config:
-              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
-              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
-              value:
-                config:
-                  vm_config:
-                    runtime: "envoy.wasm.runtime.v8"
-                    code:
-                      local:
-                        filename: "/etc/wasm/main.wasm"
-          # --------------
-          # Routing filter
-          # --------------
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
-          # --------------
-          # Routing config
-          # --------------
           route_config:
             name: proxy_routes
             virtual_hosts:
@@ -77,6 +53,13 @@ static_resources:
                   cluster: envoy_cluster2
                 decorator:
                   operation: routeToEnvoy2ViaEnvoy1
+              response_headers_to_add:
+              - header:
+                  key: "x-b3-traceid"
+                  value: "%REQ(x-b3-traceid)%"
+              - header:
+                  key: "x-request-id"
+                  value: "%REQ(x-request-id)%"
 
   clusters:
   - name: envoy_cluster1
@@ -103,20 +86,15 @@ static_resources:
               socket_address:
                 address: envoy-1
                 port_value: 10001
-  - name: jaeger-collector
+  - name: zipkin
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
-    typed_extension_protocol_options:
-      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
-        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
-        explicit_http_config:
-          http2_protocol_options: {}
     load_assignment:
-      cluster_name: jaeger-collector
+      cluster_name: zipkin
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: jaeger-collector
+                address: zipkin
                 port_value: 9411
