--- a/content/elasticsearch/envoy-zipkin-provider/docker-compose.yaml
+++ b/content/elasticsearch/envoy-zipkin-provider/docker-compose.yaml
@@ -7,7 +7,9 @@ services:
       args:
         ENVOY_CONFIG: envoy-front-proxy.yaml
     volumes:
-      - ./wasm/main.wasm:/etc/wasm/main.wasm
+      - ../shared/wasm/main.wasm:/etc/wasm/main.wasm
+    networks:
+      - net-zipkin
     depends_on:
       zipkin:
         condition: service_healthy
@@ -25,7 +27,9 @@ services:
       args:
         ENVOY_CONFIG: envoy-1.yaml
     volumes:
-      - ./wasm/main.wasm:/etc/wasm/main.wasm
+      - ../shared/wasm/main.wasm:/etc/wasm/main.wasm
+    networks:
+      - net-zipkin
     depends_on:
       zipkin:
         condition: service_healthy
@@ -41,7 +45,9 @@ services:
       args:
         ENVOY_CONFIG: envoy-2.yaml
     volumes:
-      - ./wasm/main.wasm:/etc/wasm/main.wasm
+      - ../shared/wasm/main.wasm:/etc/wasm/main.wasm
+    networks:
+      - net-zipkin
     depends_on:
       zipkin:
         condition: service_healthy
@@ -54,6 +60,8 @@ services:
       target: aiohttp-tracing-service
     environment:
     - SERVICE_NAME=1
+    networks:
+      - net-zipkin
 
   service-2:
     build:
@@ -61,10 +69,31 @@ services:
       target: aiohttp-tracing-service
     environment:
     - SERVICE_NAME=2
+    networks:
+      - net-zipkin
 
-  zipkin:
-    build:
-      context: .
-      dockerfile: Dockerfile-zipkin
+  jaeger: 
+    image: jaegertracing/all-in-one:latest
+    environment:
+      - LOG_LEVEL=debug
     ports:
-    - "${PORT_UI:-9411}:9411"
+      - "16686:16686"
+      - "4318:4318"
+    command: 
+      - "--collector.zipkin.host-port=9412"
+    networks:
+      - net-zipkin
+
+  # zipkin:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile-zipkin
+  #   ports:
+  #   - "${PORT_UI:-9411}:9411"
+  #   networks:
+  #     - net-zipkin
+
+networks:
+  net-zipkin:
+    driver: bridge 
+
