--- a/content/elasticsearch/envoy-otel-provider/Makefile
+++ b/content/elasticsearch/envoy-otel-provider/Makefile
@@ -4,7 +4,7 @@ targets := $(wildcard *.yaml)
 
 all: run
 run: build
-	docker compose up
+	docker compose up --no-attach kibana --no-attach elasticsearch
 
 build: .build.docker
 .build.docker: $(targets)
