--- a/content/elasticsearch/envoy-otel-provider/envoy-1.yaml
+++ b/content/elasticsearch/envoy-otel-provider/envoy-1.yaml
@@ -19,6 +19,11 @@ static_resources:
           # Tracing configuration 
           # ---------------------
           tracing:
+            custom_tags:
+              - tag: API Log ID
+                request_header: 
+                  name: Api-Log-Id
+                  default_value: NaN
             provider:
               name: envoy.tracers.opentelemetry
               typed_config:
@@ -84,6 +89,11 @@ static_resources:
           # Tracing configuration 
           # ---------------------
           tracing:
+            custom_tags:
+              - tag: API Log ID
+                request_header: 
+                  name: Api-Log-Id
+                  default_value: NaN
             provider:
               name: envoy.tracers.opentelemetry
               typed_config:
